[project]
name = "files-utility"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pedro Farias", email = "pedrohjfg@gmail.com"},
]
dependencies = [
    "isort>=5.13.2",
    "pylint>=3.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black"
]
test = ["pytest", "pytest-cov"]


[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
multi_line_output = 5
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
